# edtech-teacher

./: .gitignore  README.md  pyproject.toml
edtech_rl/: __init__.py  domain.py  inspect.py  local_train.py  tinker_train.py  topics.py
runs/local-multi-smoke/: metrics.csv  metrics.jsonl  strategy.jsonl  summary.json
runs/local-multitopic-full/: metrics.csv  metrics.jsonl  summary.json
runs/local-single-smoke/: metrics.csv  metrics.jsonl  strategy.jsonl  summary.json
runs/local-smoke/: metrics.csv  metrics.jsonl  summary.json
runs/local-smoke2/: metrics.csv  metrics.jsonl  summary.json
runs/tinker-binary-1/: metrics.csv  metrics.jsonl  sample_texts.jsonl  summary.json
runs/tinker-binary-10g/: metrics.csv  metrics.jsonl  sample_texts.jsonl  summary.json
runs/tinker-binary-3d/: metrics.csv
runs/tinker-binary-3e-clean/: metrics.csv  metrics.jsonl  sample_texts.jsonl  summary.json
runs/tinker-binary-6f/: metrics.csv  metrics.jsonl  sample_texts.jsonl  summary.json
runs/tinker-binary-8e/: metrics.csv  metrics.jsonl  sample_texts.jsonl  summary.json
